--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
   color: white;
+  height: 100vh;
+}
+.App-light {
+  background-color: white;
+  color: black;
+  height: 100vh;
+}
+.lorem-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3772ff;
+  height: 7%;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-link.active {
+  color: #ffffff !important;
+  background: none !important;
+  /* border: none !important; */
+  border-bottom: #3772ff !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-tabs {
+  background: none !important;
+}
+.nav-link,
+.nav-item:hover {
+  border: none !important;
+  color: #808191 !important;
+}
+#text {
+  font-size: 15px;
 }
